--- a/core/modules/system/css/system.theme.css
+++ b/core/modules/system/css/system.theme.css
@@ -632,7 +632,7 @@ img.align-right {
  * Responsive figure elements, based on http://stackoverflow.com/a/13363408.
  */
 .caption {
-  display: inline-block;
+  display: table;
   max-width: 100%;
   margin: 0 12px 10px;
   border: 1px solid #ccc;
@@ -646,7 +646,7 @@ img.align-right {
   max-width: 100%;
 }
 .caption > figcaption {
-  display: block;
+  display: table-caption;
   caption-side: bottom;
   max-width: none;
   padding: 3px 6px;
